// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features/classification/Classification should render a classified badge with an inline definition 1`] = `
<article
  className="bdl-Classification "
>
  <ClassifiedBadge
    color="#ffeb7f"
    name="Confidential"
  />
  <Label
    text={
      <FormattedMessage
        defaultMessage="Definition"
        id="boxui.classification.definition"
      />
    }
  >
    <p
      className="bdl-Classification-definition"
    >
      fubar
    </p>
  </Label>
</article>
`;

exports[`features/classification/Classification should render a classified badge with click functionality 1`] = `
<article
  className="bdl-Classification "
>
  <ClassifiedBadge
    color="#ffeb7f"
    name="Confidential"
    onClick={[Function]}
    tooltipText="fubar"
  />
</article>
`;

exports[`features/classification/Classification should render a classified badge with definition in tooltip 1`] = `
<article
  className="bdl-Classification "
>
  <ClassifiedBadge
    color="#ffeb7f"
    name="Confidential"
    tooltipText="fubar"
  />
</article>
`;

exports[`features/classification/Classification should render a classified badge with no definition 1`] = `
<article
  className="bdl-Classification "
>
  <ClassifiedBadge
    color="#ffeb7f"
    name="Confidential"
  />
</article>
`;

exports[`features/classification/Classification should render a classified badge with security controls when provided and message style is inline 1`] = `
<article
  className="bdl-Classification "
>
  <ClassifiedBadge
    color="#ffeb7f"
    name="Confidential"
  />
  <Label
    text={
      <FormattedMessage
        defaultMessage="Definition"
        id="boxui.classification.definition"
      />
    }
  >
    <p
      className="bdl-Classification-definition"
    >
      fubar
    </p>
  </Label>
  <SecurityControls
    classificationName="Confidential"
    controls={
      Object {
        "sharedLink": Object {
          "accessLevel": "collabOnly",
        },
      }
    }
    controlsFormat="short"
    definition="fubar"
    itemName=""
    maxAppCount={3}
    shouldRenderLabel={true}
  />
</article>
`;

exports[`features/classification/Classification should render classification last modified information with message id (boxui.classification.importedBy)
        when it has modifiedBy (and isImportedClassification: true) and message style is inline 1`] = `
<FormattedMessage
  defaultMessage="Imported from {modifiedBy} on {modifiedAt}"
  id="boxui.classification.importedBy"
  values={
    Object {
      "modifiedAt": <FormattedDate
        day="numeric"
        month="long"
        value={2020-07-16T00:51:10.000Z}
        year="numeric"
      />,
      "modifiedBy": "A User",
    }
  }
/>
`;

exports[`features/classification/Classification should render classification last modified information with message id (boxui.classification.modifiedBy)
        when it has modifiedBy (and isImportedClassification: false) and message style is inline 1`] = `
<FormattedMessage
  defaultMessage="Applied by {modifiedBy} on {modifiedAt}"
  id="boxui.classification.modifiedBy"
  values={
    Object {
      "modifiedAt": <FormattedDate
        day="numeric"
        month="long"
        value={2020-07-16T00:51:10.000Z}
        year="numeric"
      />,
      "modifiedBy": "A User",
    }
  }
/>
`;

exports[`features/classification/Classification should render classification last modified information with message id (boxui.classification.modifiedBy)
        when it has modifiedBy (and isImportedClassification: undefined) and message style is inline 1`] = `
<FormattedMessage
  defaultMessage="Applied by {modifiedBy} on {modifiedAt}"
  id="boxui.classification.modifiedBy"
  values={
    Object {
      "modifiedAt": <FormattedDate
        day="numeric"
        month="long"
        value={2020-07-16T00:51:10.000Z}
        year="numeric"
      />,
      "modifiedBy": "A User",
    }
  }
/>
`;

exports[`features/classification/Classification should render not classified message 1`] = `
<article
  className="bdl-Classification "
>
  <span
    className="bdl-Classification-missingMessage"
  >
    <FormattedMessage
      defaultMessage="Not classified"
      id="boxui.classification.missing"
    />
  </span>
</article>
`;
